:lipstick: Fixed list copy and stats button spacing on mobile

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -62,6 +62,10 @@ section {
 				.edit-mode-icons a:active {
 					color: #9e9e9e;
 				}
+
+				.secondary-content .material-icons {
+					margin: 0;
+				}
 			}
 
 			@include desktop {
